[gd_scene load_steps=3 format=3 uid="uid://d0r5tnoglfayx"]

[ext_resource type="Texture2D" uid="uid://ddvhmd8c1slfx" path="res://Assets/other/IMG-20250524-WA0080.jpeg" id="1_iuonh"]
[ext_resource type="Script" uid="uid://cbgginet7e348" path="res://scripts/multiplayer_controller.gd" id="2_iuonh"]

[node name="main" type="Node2D"]

[node name="MultiplayerController" type="Node" parent="."]
script = ExtResource("2_iuonh")

[node name="Main" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="wideDaniel" type="Sprite2D" parent="Main"]
visible = false
position = Vector2(216, 240)
rotation = 1.57079
scale = Vector2(0.195087, 1.56462)
texture = ExtResource("1_iuonh")

[node name="Host" type="Button" parent="Main"]
layout_mode = 0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 256.0
text = "Host Game"

[node name="Button" type="Button" parent="Main/Host"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 31.0
text = "Save: None"

[node name="Password" type="LineEdit" parent="Main/Host"]
layout_mode = 0
offset_left = 192.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 64.0
placeholder_text = "Password..."

[node name="Join" type="Button" parent="Main"]
layout_mode = 0
offset_top = 72.0
offset_right = 192.0
offset_bottom = 136.0
text = "Join Game"

[node name="JoinCode" type="LineEdit" parent="Main/Join"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 32.0
placeholder_text = "Join Code..."

[node name="Password" type="LineEdit" parent="Main/Join"]
layout_mode = 0
offset_left = 192.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 64.0
placeholder_text = "Password..."

[node name="Quit Game" type="Button" parent="Main"]
layout_mode = 0
offset_top = 576.0
offset_right = 192.0
offset_bottom = 640.0
text = "Quit"

[node name="Username" type="LineEdit" parent="Main"]
layout_mode = 0
offset_left = 944.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 58.0
text = "wideDaniel"
placeholder_text = "Username...."
emoji_menu_enabled = false

[node name="Nakama" type="Label" parent="Main"]
layout_mode = 0
offset_left = 944.0
offset_top = 432.0
offset_right = 1067.0
offset_bottom = 455.0
text = "Nakama Details"

[node name="NakamaIP" type="LineEdit" parent="Main/Nakama"]
layout_mode = 0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 90.0
text = "127.0.0.1"
placeholder_text = "Username...."
emoji_menu_enabled = false

[node name="NakamaPort" type="LineEdit" parent="Main/Nakama"]
layout_mode = 0
offset_top = 96.0
offset_right = 200.0
offset_bottom = 146.0
text = "7350"
placeholder_text = "Username...."
emoji_menu_enabled = false

[node name="NakamaProtocol" type="LineEdit" parent="Main/Nakama"]
layout_mode = 0
offset_top = 152.0
offset_right = 200.0
offset_bottom = 202.0
text = "http"
placeholder_text = "Username...."
emoji_menu_enabled = false

[connection signal="button_down" from="Main/Host" to="MultiplayerController" method="_on_host_button_down"]
[connection signal="button_down" from="Main/Join" to="MultiplayerController" method="_on_join_button_down"]
[connection signal="text_changed" from="Main/Join/JoinCode" to="MultiplayerController" method="_on_join_code_text_changed"]
[connection signal="text_changed" from="Main/Username" to="MultiplayerController" method="_on_username_text_changed"]
